--- a/login.html
+++ b/login.html
@@ -44,6 +44,7 @@
 </section>
 
 <script type="module" src="js/firebase.js"></script>
+<script type="module" src="js/app.js"></script>
 
 </body>
 </html>
