Atualizar o premium.html

--- a/premium.html
+++ b/premium.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Área Premium - Cartola FC Pro</title>
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>Área Premium – Cartola FC Pro</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <header class="header">
@@ -13,9 +14,15 @@
 
 <section class="hero">
   <h2>Área Premium</h2>
-  <p>Conteúdo exclusivo para membros.</p>
+  <p>Scout inteligente da rodada 🔥</p>
+
+  <div id="ranking"></div>
+
+  <br>
   <a href="index.html" class="btn-primary">Voltar para Home</a>
 </section>
+
+<script type="module" src="js/premium.js"></script>
 
 </body>
 </html>
