Atualizar o premium.html

--- a/premium.html
+++ b/premium.html
@@ -10,19 +10,39 @@
 
 <header class="header">
   <h1>⚽ Cartola FC Pro</h1>
+  <a href="index.html" class="btn-login">Sair</a>
 </header>
 
-<section class="hero">
-  <h2>Área Premium</h2>
-  <p>Scout inteligente da rodada 🔥</p>
+<section class="dashboard">
 
-  <div id="ranking"></div>
+  <h2>🔥 Capitães da Rodada</h2>
 
-  <br>
-  <a href="index.html" class="btn-primary">Voltar para Home</a>
+  <div class="players-grid">
+
+    <div class="player-card capitao">
+      <h3>Neymar Jr</h3>
+      <p>Posição: ATA</p>
+      <p>Média: 8.4 pts</p>
+      <p>Valorização: +0.80 C$</p>
+    </div>
+
+    <div class="player-card">
+      <h3>Arrascaeta</h3>
+      <p>Posição: MEI</p>
+      <p>Média: 7.2 pts</p>
+      <p>Valorização: +0.65 C$</p>
+    </div>
+
+    <div class="player-card">
+      <h3>Hulk</h3>
+      <p>Posição: ATA</p>
+      <p>Média: 7.8 pts</p>
+      <p>Valorização: +0.70 C$</p>
+    </div>
+
+  </div>
+
 </section>
-
-<script type="module" src="js/premium.js"></script>
 
 </body>
 </html>
