--- a/premium.html
+++ b/premium.html
@@ -10,39 +10,63 @@
 
 <header class="header">
   <h1>⚽ Cartola FC Pro</h1>
-  <a href="index.html" class="btn-login">Sair</a>
 </header>
 
-<section class="dashboard">
+<section class="hero">
+  <h2>🏆 Área Premium – Rodada Atual</h2>
+</section>
 
-  <h2>🔥 Capitães da Rodada</h2>
+<section class="premium-container">
 
-  <div class="players-grid">
+  <!-- Melhor Capitão -->
+  <div class="premium-card destaque">
+    <h3>🔥 Melhor Capitão da Rodada</h3>
+    <p><strong>Pedro (Flamengo)</strong></p>
+    <p>Média: 8.7 pts | Último jogo: 2 gols ⚽⚽</p>
+    <p>Ótimo confronto em casa, alta finalização.</p>
+  </div>
 
-    <div class="player-card capitao">
-      <h3>Neymar Jr</h3>
-      <p>Posição: ATA</p>
-      <p>Média: 8.4 pts</p>
-      <p>Valorização: +0.80 C$</p>
-    </div>
+  <!-- Melhor Técnico -->
+  <div class="premium-card">
+    <h3>🧠 Melhor Técnico</h3>
+    <p><strong>Abel Ferreira (Palmeiras)</strong></p>
+    <p>Time sólido defensivamente e favorito na rodada.</p>
+  </div>
 
-    <div class="player-card">
-      <h3>Arrascaeta</h3>
-      <p>Posição: MEI</p>
-      <p>Média: 7.2 pts</p>
-      <p>Valorização: +0.65 C$</p>
-    </div>
+  <!-- Time da Semana -->
+  <div class="premium-card">
+    <h3>⭐ Time Ideal da Semana</h3>
+    <ul>
+      <li>GOL: Weverton (PAL)</li>
+      <li>ZAG: Fabrício Bruno (FLA)</li>
+      <li>ZAG: Gustavo Gómez (PAL)</li>
+      <li>LAT: Ayrton Lucas (FLA)</li>
+      <li>LAT: Mayke (PAL)</li>
+      <li>MEI: Arrascaeta (FLA)</li>
+      <li>MEI: Raphael Veiga (PAL)</li>
+      <li>MEI: André (FLU)</li>
+      <li>ATA: Pedro (FLA)</li>
+      <li>ATA: Calleri (SPFC)</li>
+      <li>ATA: Hulk (CAM)</li>
+    </ul>
+  </div>
 
-    <div class="player-card">
-      <h3>Hulk</h3>
-      <p>Posição: ATA</p>
-      <p>Média: 7.8 pts</p>
-      <p>Valorização: +0.70 C$</p>
-    </div>
-
+  <!-- Destaques -->
+  <div class="premium-card">
+    <h3>📊 Destaques Estatísticos</h3>
+    <ul>
+      <li>Mais finalizações: Pedro (5/jogo)</li>
+      <li>Mais assistências: Arrascaeta</li>
+      <li>Mais desarmes: André</li>
+      <li>Defesa menos vazada: Palmeiras</li>
+    </ul>
   </div>
 
 </section>
+
+<footer class="footer">
+  <p>Conteúdo exclusivo para membros Premium</p>
+</footer>
 
 </body>
 </html>
