Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cartola FC Pro</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Cartola FC Pro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="header">
-  <h1>⚽ Cartola FC Pro</h1>
-  <a href="login.html" class="btn-login">Entrar</a>
-</header>
+    <div class="sidebar">
+        <div class="logo">
+            <div class="shield">
+                <div class="star"></div>
+                <div class="ball"></div>
+            </div>
+            <h2>Cartola FC Pro</h2>
+        </div>
 
-<section class="hero">
-  <h2>Análise Completa da Rodada</h2>
-  <p>Estatísticas avançadas, capitão certeiro e jogadores custo-benefício.</p>
-  <a href="premium.html" class="btn-primary">Área Premium</a>
-</section>
+        <ul class="menu">
+            <li>🏠 Dashboard</li>
+            <li>🎯 Central Cartola</li>
+            <li>🇧🇷 Brasileirão</li>
+            <li>🌍 Europa</li>
+            <li>📊 Estatísticas</li>
+            <li>🤖 Gerador de Time</li>
+            <li>🏆 Ranking</li>
+        </ul>
+    </div>
 
-<section class="card">
-  <h3>⭐ Capitão da Rodada</h3>
-  <p>Pedro — Joga em casa e enfrenta defesa vulnerável.</p>
-</section>
+    <div class="main">
 
-<section class="card">
-  <h3>💰 Custo-benefício</h3>
-  <ul>
-    <li>Meia barato com alta média</li>
-    <li>Lateral ofensivo em casa</li>
-    <li>Goleiro contra ataque fraco</li>
-  </ul>
-</section
+        <header>
+            <h1>Dashboard</h1>
+            <div class="rodada-info">
+                <span id="rodada">Rodada 0</span>
+                <span id="mercado">Mercado: --</span>
+            </div>
+        </header>
+
+        <section class="cards">
+            <div class="card">
+                <h3>🧢 Melhor Capitão</h3>
+                <p id="capitao">Carregando...</p>
+            </div>
+
+            <div class="card">
+                <h3>⚡ Melhor Jogador</h3>
+                <p id="melhorJogador">Carregando...</p>
+            </div>
+
+            <div class="card">
+                <h3>🧠 Melhor Técnico</h3>
+                <p id="melhorTecnico">Carregando...</p>
+            </div>
+
+            <div class="card">
+                <h3>💰 Maior Valorização</h3>
+                <p id="valorizacao">Carregando...</p>
+            </div>
+        </section>
+
+        <section class="tabela-section">
+            <h2>🇧🇷 Brasileirão Atualizado</h2>
+            <div id="tabelaBrasileirao">
+                Carregando tabela...
+            </div>
+        </section>
+
+        <section class="europa-section">
+            <h2>🌍 Europa Atualizado</h2>
+            <div id="tabelaEuropa">
+                Carregando dados europeus...
+            </div>
+        </section>
+
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
