Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@ alert("JS funcionando");
         <header>
             <h1>Dashboard</h1>
             <div class="rodada-info">
-                <span id="rodada">Rodada 0</span>
+                <div class="rodada-info">
+    <span id="rodada">Rodada 0</span>
+    <span id="mercado">Mercado: --</span>
+</div>
                 <span id="mercado">Mercado: --</span>
             </div>
         </header>
