Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ alert("JS funcionando");
 
             <div class="card">
                 <h3>🧠 Melhor Técnico</h3>
-                <p id="melhorTecnico">Carregando...</p>
+                <p id="melhorJogador">Carregando...</p>
             </div>
 
             <div class="card">
