Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ alert("JS funcionando");
 <head>
     <meta charset="UTF-8">
     <title>Cartola FC Pro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
